# Transgrade-MCQ

./: README.md  dockerfile  processed_mcq.json  pyproject.toml
src/mcq/: crew.py  main.py
src/mcq/config/: agents.yaml  tasks.yaml
