[project]
name = "mcq"
version = "0.1.0"
description = "mcq using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0"
]

[project.scripts]
mcq = "mcq.main:run"
run_crew = "mcq.main:run"
train = "mcq.main:train"
replay = "mcq.main:replay"
test = "mcq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
